Poprawione modele i relacje, baza stworzona dzięki migracjom, działa, ale do poprawy. CRUD działa tylko na Kodach rabatowych. Do poprawy chyba coś w migracjach.

--- a/ProjektSklep/appsettings.json
+++ b/ProjektSklep/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BazaDanychSklepu;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NowaBazaDanychSklepu;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
