--- a/ProjektSklep/ProjektSklep.csproj
+++ b/ProjektSklep/ProjektSklep.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Attachments\" />
+  </ItemGroup>
+
 
 
 </Project>
