Dodanie Identity do projektu, przeniesienie bazy danych do nowej bazy (korzystajacej już z identity). Problem z przenoszeniem na strone logowania.

--- a/ProjektSklep/appsettings.json
+++ b/ProjektSklep/appsettings.json
@@ -1,7 +1,8 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NowaBazaDanychSklepu;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ProjektSklep;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ProjektSklepContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjektSklep;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
