--- a/ProjektSklep/ProjektSklep.csproj
+++ b/ProjektSklep/ProjektSklep.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="GitHub" Version="1.29.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.10" />
